--- a/css/style.css
+++ b/css/style.css
@@ -274,9 +274,10 @@ img {
   text-transform: uppercase;
 }
 
-.hero__link {
+.hero__button {
   display: inline-block;
   border-radius: 4px;
+  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 10px 32px;
 
@@ -288,7 +289,10 @@ img {
   line-height: 1.87;
   align-items: center;
   letter-spacing: 0.06em;
+
+  cursor: pointer;
 }
+
 
 /* Section #2 */
 .benefits__title {
@@ -703,6 +707,52 @@ img {
 
 
 
+
+
+/* Модальное окно */
+
+.backdropd {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  background: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms var(--timing-function);
+
+  opacity: 1;
+}
+
+.backdropd--hidden {
+opacity: 0;
+pointer-events: none;
+
+}
+
+.backdrop__modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  min-width: 528px;
+  min-height: 581px;
+
+  background: #FFFFFF;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--timing-function);
+}
+  
+
+.backdropd--hidden .backdrop__modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
 
 
 /* Уникальний контент portfolio.html */
