--- a/css/style.css
+++ b/css/style.css
@@ -728,12 +728,11 @@ img {
 }
 
 .backdropd--hidden {
-opacity: 0;
-pointer-events: none;
-
+  opacity: 0;
+  pointer-events: none;
 }
 
-.backdrop__modal {
+.backdrop-modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -742,11 +741,7 @@ pointer-events: none;
   min-height: 581px;
 
   padding-top: 40px;
-  /* padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 93px;
-  padding-bottom: 163px; */
-  
+    
   background: #FFFFFF;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -756,7 +751,11 @@ pointer-events: none;
   transition: transform 250ms var(--timing-function);
 }
 
-.modal__button-clouse {
+.backdropd--hidden .backdrop__modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal__button--clouse {
   position: absolute;
   right: 0;
   top: 0;
@@ -771,8 +770,8 @@ pointer-events: none;
   border: none;
 
   background-image: url(../images/SmallIcon/close-black.svg);
-background-repeat:no-repeat ;
-background-position: center;
+  background-repeat:no-repeat;
+  background-position: center;
   cursor: pointer;
 }
   
@@ -781,10 +780,12 @@ background-position: center;
   line-height: 1.15;
   text-align: center;
   margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .modal__field {
   display: flex;
+  position: relative;
   flex-direction: column;
    
   width: 448px;
@@ -792,33 +793,116 @@ background-position: center;
   margin-left: 40px;
   margin-right: 40px; 
   margin-bottom: 28px;
-}
- 
-.modal__label {
   
+}
+
+.modal__label {
+  position: absolute;
+  
+  top: 50%;
+  left: 42px;
+  transform: translateY(-50%);
+
+  color: var(--text-color);
+  letter-spacing: 0.01em;
+  
+  transition: transform 250ms var(--timing-function),
+  color 250ms var(--timing-function);
 }
 
 .modal__input {
   margin: 0;
   padding: 12px;
+  padding-left: 41px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
   border-radius: 4px;
  
   letter-spacing: 0.01em;
 }
 
-.modal__textarea {
-  resize: none;
-  padding: 16px 12px;
+.modal__svg {
+  position: absolute;
+  top: 50%;
+  left: 19px;
+  transform: translateY(-50%);
+  
+  width: 18px;
+  height: 18px;
+
+  transition: fill 250ms var(--timing-function);
 }
 
-.modal__button-submit {
+.modal__textarea {
+  resize: none;
+  
+  display: flex;
+  flex-direction: column;
+  
+  padding: 16px 12px;
+  margin-left: 40px;
+  margin-right: 40px; 
+  margin-bottom: 20px;
+  
+  width: 448px;
+ 
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-checkbox {
+  margin-left: 53px;
+  margin-right: 52px;
+
   display: inline-block;
+  outline: 1px solid  rgba(33, 33, 33, 0.2);;
+}
+
+.modal-checkbox__input {
+  
+  
+}
+
+.modal-checkbox__label {
+  display: inline-block;
+    
+  margin-bottom: 30px;
+
+  color: var(--text-color);
+
+  letter-spacing: 0.03em;
+}
+
+.modal-checkbox__label--link {
+  color: var(--accent-color);
+  letter-spacing: 0.03em;
+}
+
+/* Кастомный checkbox */
+.modal-checkbox__input--customm {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-checkbox__input:checked + .modal-checkbox__input--customm {
+  background-color: var(--accent-color);
+  background-image: url(../images/SmallIcon/icon-check.svg)
+  background-saiz: 
+  
+}
+
+.modal__button--submit {
+  display: block;
   border-radius: 4px;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
   padding: 10px 56px;
 
   color: var(--white-color);
@@ -833,10 +917,26 @@ background-position: center;
   cursor: pointer;
 }
 
-.backdropd--hidden .backdrop__modal {
-  transform: translate(-50%, -50%) scale(1.1);
+/* Модальное окно focus*/
+
+.modal__field:focus-within > .modal__svg {
+ fill: var(--accent-color);
 }
 
+.modal__field:focus-within > .modal__label {
+  color: var(--accent-color);
+  transform: translate(-70%, -300%);
+ }
+
+ .modal__input:not(:placeholder-shown) ~ .modal__label {
+  transform: translate(-70%, -300%);
+ }
+
+ .modal__field:focus-within > .modal__input,
+ .modal__textarea:focus  {
+  border: 1px solid var(--accent-color);
+  outline: 0;
+} 
 
 /* Уникальний контент portfolio.html */
 .product-card {
