--- a/css/style.css
+++ b/css/style.css
@@ -851,23 +851,28 @@ img {
 }
 
 .modal-checkbox {
+  display: flex;
+  align-items: center;
+ 
   margin-left: 53px;
   margin-right: 52px;
-
-  display: inline-block;
-  outline: 1px solid  rgba(33, 33, 33, 0.2);;
+  margin-bottom: 30px;
 }
 
 .modal-checkbox__input {
-  
-  
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;  
 }
 
 .modal-checkbox__label {
   display: inline-block;
     
-  margin-bottom: 30px;
-
   color: var(--text-color);
 
   letter-spacing: 0.03em;
@@ -883,15 +888,19 @@ img {
   display: inline-block;
   width: 15px;
   height: 15px;
+
+  margin-right: 8px;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
+  border-radius: 2px;
 }
 
 .modal-checkbox__input:checked + .modal-checkbox__input--customm {
+  border-color: var(--accent-color);
   background-color: var(--accent-color);
-  background-image: url(../images/SmallIcon/icon-check.svg)
-  background-saiz: 
-  
+  background-image: url(../images/SmallIcon/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
 }
 
 .modal__button--submit {
