--- a/css/style.css
+++ b/css/style.css
@@ -893,6 +893,10 @@ img {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 2px;
+  
+  transition: background-color 250ms var(--timing-function), 
+  border-color 250ms var(--timing-function);
+ 
 }
 
 .modal-checkbox__input:checked + .modal-checkbox__input--customm {
@@ -901,7 +905,7 @@ img {
   background-image: url(../images/SmallIcon/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
-}
+ }
 
 .modal__button--submit {
   display: block;
